crates/biome_js_parser/tests/js_test_suite/error/import_defer_err.ts
import defer { doSomething } from "some-module1";
import defer defaultExport from "some-module2";
import type defer { doSomething } from "some-module3"
import defer type * as foo from "bar";